--- a/Journal/Journal/Views/Base.lproj/Main.storyboard
+++ b/Journal/Journal/Views/Base.lproj/Main.storyboard
@@ -23,7 +23,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="oHC-e6-PYe" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-911.59420289855075" y="282.58928571428572"/>
+            <point key="canvasLocation" x="-800" y="283"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="g4z-CU-Q2G">
@@ -108,7 +108,7 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" title="Journal" id="EOy-c1-PyK">
-                        <barButtonItem key="rightBarButtonItem" image="plus.app" catalog="system" id="lQO-p3-ykI">
+                        <barButtonItem key="rightBarButtonItem" title="Item" image="plus.circle" catalog="system" id="lQO-p3-ykI">
                             <connections>
                                 <segue destination="7BF-Oa-Qz8" kind="presentation" identifier="CreateEntryModalSegue" modalPresentationStyle="fullScreen" id="lZR-E3-PsV"/>
                             </connections>
@@ -276,6 +276,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="plus.app" catalog="system" width="128" height="114"/>
+        <image name="plus.circle" catalog="system" width="128" height="121"/>
     </resources>
 </document>
