--- a/Journal/Journal/View/Storyboard/Base.lproj/Main.storyboard
+++ b/Journal/Journal/View/Storyboard/Base.lproj/Main.storyboard
@@ -149,7 +149,7 @@
                                     <outlet property="entryBodyTextView" destination="drk-Yu-j5K" id="qJt-rz-pJZ"/>
                                     <outlet property="entryTimestampLabel" destination="im3-EU-LCe" id="iX4-xR-uky"/>
                                     <outlet property="entryTitleLabel" destination="LR8-Fy-iM1" id="iDo-28-l8N"/>
-                                    <segue destination="qlO-Ef-vEf" kind="show" id="ZDg-Kw-Qm5"/>
+                                    <segue destination="qlO-Ef-vEf" kind="show" identifier="EntryDetailsSegue" id="ZDg-Kw-Qm5"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -161,7 +161,7 @@
                     <navigationItem key="navigationItem" title="Journal" id="nDh-UN-Wko">
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="ALw-rD-8Iw">
                             <connections>
-                                <segue destination="lBj-J5-s30" kind="presentation" modalPresentationStyle="fullScreen" id="Tr1-9z-j3v"/>
+                                <segue destination="lBj-J5-s30" kind="presentation" identifier="AddEntrySegue" modalPresentationStyle="fullScreen" id="Tr1-9z-j3v"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
