--- a/CoreDataJournal/CoreDataJournal/Views/Base.lproj/Main.storyboard
+++ b/CoreDataJournal/CoreDataJournal/Views/Base.lproj/Main.storyboard
@@ -151,7 +151,7 @@
                     <navigationItem key="navigationItem" title="Journal" id="qYh-Tb-xwG">
                         <barButtonItem key="rightBarButtonItem" title="Item" image="plus.app" catalog="system" id="tm5-v8-2sn">
                             <connections>
-                                <segue destination="C0z-xm-0g6" kind="presentation" id="7ze-n7-N8a"/>
+                                <segue destination="C0z-xm-0g6" kind="presentation" identifier="DetailSegue" id="7ze-n7-N8a"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
